<resources>
    <string name="app_name">TalkBox</string>
    <string name="admin_login">admin_login</string>
    <string name="admin_email">admin_email</string>
    <string name="admin_password">admin_password</string>
    <string name="enter_email">enter_email</string>
    <string name="enter_password">enter_password</string>
    <string name="login_here">login here</string>
    <string name="admin_signup_register">admin_signup_register</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="user_password">user_password</string>
    <string name="user_signup_repeat_password">user_signup_repeat_password</string>
    <string name="user_signup_phone_number">user_signup_phone_number</string>
    <string name="user_signup_register">user_signup_register</string>
    <string name="user_back">user_back</string>
    <string name="user_login">user_login</string>
    <string name="signup_here">signup here</string>
    <string name="signup">signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_bar">HomeBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_or">login or</string>
    <string name="chats">Chats</string>
    <string name="call">Call</string>
    <string name="speechnotes">SpeechNotes</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_profile">Set Profile</string>
    <string name="action_logout">action_logout</string>
    <string name="about">about</string>
    <string name="logout">logout</string>
    <string name="select_languages">select_languages</string>

</resources>
