<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_call"
            android:title="@string/call" />
        <item
            android:id="@+id/nav_speechnotes"
            android:icon="@drawable/ic_inbox"
            android:title="@string/speechnotes" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_add_alarm_black_24dp"
            android:title="@string/set_reminder" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box"
            android:title="@string/set_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

        </menu>
    </item>

</menu>
