<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/newimg"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            app:contentPadding="6dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp">

                <TextView
                    android:id="@+id/txt_vw_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/acme"
                    android:text="@string/user_login"
                    android:textSize="25sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edt_txt_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_vw_login"
                    android:layout_marginBottom="10dp"
                    app:errorEnabled="true"
                    >

                    <EditText
                        android:id="@+id/edt_txt_al_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans"
                        android:hint="@string/enter_email"
                        android:inputType="textWebEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edt_txt_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_txt_input_email"
                    android:layout_marginBottom="10dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    >

                    <EditText
                        android:id="@+id/edt_txt_al_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/open_sans"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_a_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_txt_password_input"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:background="#373737"
                    android:fontFamily="@font/acme"
                    android:text="@string/login_here"
                    android:textColor="#F9B642"
                    android:textSize="18sp" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>